# libpyosdev

./: .buildinfo  .buildinfo.bak  8086.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  arch_template.html  contrib.html  debug.html  genindex.html  getting_started.html  index.html  objects.inv  prog_manage.html  pyproject.toml  search.html  searchindex.js  use_labels.html
.doctrees/: 8086.doctree  arch_template.doctree  contrib.doctree  debug.doctree  environment.pickle  getting_started.doctree  index.doctree  prog_manage.doctree  use_labels.doctree
_sources/: index.md.txt  prog_manage.md.txt
docs/source/: 8086.md  arch_template.md  conf.py  contrib.md  debug.md  getting_started.md  index.html  index.md  math.md  prog_manage.md  support_8086.md  use_labels.md
examples/: 8086_1.py  8086_bios.py  8086_labels.py  labels.py  program1.py  programOOP.py  programparts.py
examples/output/: 8086_bios.asm  8086_labels.asm  8086_program.asm  first_program.asm  program_parts.asm  using_labels.asm
libpyosdev/: __init__.py  label.py  math.py  program.py  register.py
libpyosdev/arch/: __init__.py  bios.py  infos.py  instructions.py  registers.py
libpyosdev/presets/x86_8086/: bootloader.py  constants.py  kernel.py
libpyosdev/x86_8086/: __init__.py  bios.py  infos.py  instructions.py  registers.py
tests/: architecture.py  bootloader.py  bootsect.py  calcseg.py  instructions.py  part.py  program.py  registers.py
